Setup the design for userprofile update

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,7 +92,10 @@ label {
 .feedUserInfo span {
     margin-top: -5px;
 }
-
+.form-control:disabled, .form-control[readonly] {
+    background-color: #fff;
+    border: none;
+}
 
 
 
