--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -72,6 +72,10 @@ label {
     height: 200px;
     border-radius: 50%;
     margin: auto;
+    margin-top: 20px;
+    border: 3px solid;
+    background-size: cover;
+    border-color: darkseagreen;
 }
 .feedUserImg {
     width: 80px;
