--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -101,7 +101,48 @@ label {
     border: none;
 }
 
+.userSearch h2 {
+    font-size: 28px;
+    font-weight: 500;
+    color: rgb(65, 8, 210);
+    margin: 10px;
+}
+.userSearch input {
+    padding: 10px 0;
+    padding-left: 25px;
+    font-size: 18px;
+}
+.userSearch input:focus {
+    box-shadow: none;
+    border: none;
+}
+.userSearch span {
+    width: 65px;
+    font-size: 22px;
+}
+.userSearch .btn:focus {
+    box-shadow: none;
+}
+.userDiv {  
+    border-radius: 10px;
+    padding: 15px 5px;
+}
+.userDiv h2 {
+    font-size: 18px;
+    font-weight: bold;
+    
+}
+.userDiv h5 {
+    font-size: 14px;
+    font-weight: bold;
 
-
-
-
+}
+.userImgDiv {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: auto;
+    border: 3px solid;
+    background-size: cover;
+    border-color: darkseagreen;
+}
